--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Flask Website</title>
+    <title>Your Simple Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,7 +41,7 @@
 <body>
 
     <header>
-        <h1>Your Flask Website</h1>
+        <h1>Your Simple Website</h1>
     </header>
 
     <nav>
@@ -52,7 +52,7 @@
 
     <section>
         <h2>Main Content</h2>
-        <p>This is a simple Flask website. You can customize this section with your own content.</p>
+        <p>This is a simple static website. You can customize this section with your own content.</p>
     </section>
 
 </body>
